--- a/auth/login/login.css
+++ b/auth/login/login.css
@@ -120,8 +120,8 @@ font-size: 14px;
     margin-top: 30px;
 }
 
-.register{
+/* .register{
     justify-content: right;
     margin-top: 30px;
     margin-left: 10px;
-}
+} */
